# trpg-bot2

./: .envrc.tmp  .gitignore  .terraform.lock.hcl  .tool-versions  Dockerfile  README.md  compose.local.yml  compose.yml  firebase.local.json  main.tf  pyproject.toml  startup.sh
.github/workflows/: terraform-ci.yml
src/python/main/: main.py
src/python/main/arg/: __init__.py
src/python/main/domain/: ABCArg.py  CocMessageGenerator.py  CommandInterpreter.py  Dice.py  DiceArg.py  StaticArg.py  __init__.py
src/python/main/player/: CocPlayer.py  __init__.py
src/python/main/repository/: CocPlayer.py  PlayerRepository.py  __init__.py
src/python/main/usecase/: CocMessageGenerator.py  CocUsecase.py  __init__.py
src/python/main/usecase/arg/: ABCArg.py  DiceArg.py  PlayerArg.py  StaticArg.py
